# face_controller

./: .gitignore  README.md  pyproject.toml
src/: actions.py  landmarks.py  main.py  mapper.py  ui.py
src/face_controller.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
