[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face_controller"
version = "0.1.0"
description = "Use your face to control games and programs"
dependencies = [
    "PyQt6",
    "numpy",
    "opencv-python",
    "mediapipe",
    "pynput"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
